--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-list.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-static __expanded">
+﻿<div class="blade-static">
     <va-breadcrumb ng-model="blade.breadcrumbs"></va-breadcrumb>
     <div class="form-group">
         <div class="form-input __search">
