customers - adding organizations (fixes)

--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-list.tpl.html
@@ -1,8 +1,9 @@
-﻿<div class="blade-content">
+﻿<div class="blade-static __bottom" ng-include="'Modules/Core/VirtoCommerce.Core.Web/Scripts/common/ok-cancel2.tpl.html'"></div>
+<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form name="contextEntityDetailForm" class="form">
-                <fieldset ng-init="setForm(contextEntityDetailForm);">
+            <form name="formScope" class="form">
+                <fieldset ng-init="setForm(formScope);">
                     <div class="form-group" ng-repeat="prop in blade.currentEntities as properties">
                         <label class="form-label" for="">
                             {{prop.name}} 
@@ -14,7 +15,7 @@
                             <input ng-model="prop.value" required class="form-control" />
                         </div>
                     </div>
-                    
+
                     <div class="text" ng-if="properties.length == 0">None</div>
                 </fieldset>
             </form>
