--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/customer-detail.tpl.html
@@ -23,7 +23,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="form-input">
+                    <div class="form-group">
                         <label class="form-label">Organization(s)</label>
                         <ui-select multiple ng-model="blade.currentEntity.organizations">
                             <ui-select-match placeholder="Select organization(s)">{{$item.name}}</ui-select-match>
