--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-list.tpl.html
@@ -1,4 +1,4 @@
-﻿<div class="blade-static">
+﻿<div class="blade-static __expanded">
     <va-breadcrumb ng-model="blade.breadcrumbs"></va-breadcrumb>
     <div class="form-group">
         <div class="form-input __search">
@@ -42,7 +42,6 @@
                             <td class="table-col" ng-click='selectNode(data)'>
                                 <span class="table-t">{{data.displayName}}</span>
                                 <!--<span class="table-descr" ng-if="data.statusId">{{data.statusId}}</span>-->
-
                             </td>
                             <td class="table-col" ng-click='selectNode(data)'>
                                 <span>{{getMainAddress(data)}}</span>
