--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/Scripts/Settings/blades/$settings-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/Scripts/Settings/blades/$settings-list.tpl.html
@@ -2,7 +2,7 @@
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <ul class="list __items">
-                <li class="list-item" ng-repeat="data in objects" ng-class="{'active': data.id === selectedNodeId}" ng-click='selectNode(data)'>
+                <li class="list-item" ng-repeat="data in objects" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)'>
                     <i class="list-ico fa fa-wrench"></i>
                     <span class="name">{{data.title}}</span>
                 </li>
