--- a/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Order/VirtoCommerce.OrderModule.Web/Scripts/blades/shipment-detail.tpl.html
@@ -19,10 +19,15 @@
                                     <span ng-bind-html="x | highlight: $select.search"></span>
                                 </ui-select-choices>
                             </ui-select>
-                       </div>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="form-label">Fulfillment</label>
+                        <label class="form-label">
+                            Fulfillment center
+                            <a href="" ng-click="openFulfillmentCentersList()">
+                                <i class="form-ico fa fa-pencil"></i>
+                            </a>
+                        </label>
                         <div class="form-input">
                             <ui-select ng-model="blade.currentEntity.fulfillmentCenterId">
                                 <ui-select-match placeholder="Select or search a center...">{{$select.selected.name}}</ui-select-match>
@@ -46,7 +51,7 @@
                             <select ng-model="blade.currentEntity.employeeId"></select>
                         </div>
                     </div>
-                 </div>
+                </div>
             </div>
             <div class="tile-group four">
                 <va-widget-container group="shipmentDetailWidgets" blade="blade"></va-widget-container>
