--- a/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/Scripts/Settings/blades/settings-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Core/VirtoCommerce.Core.Web/Scripts/Settings/blades/settings-detail.tpl.html
@@ -5,17 +5,12 @@
                 <fieldset ng-repeat="groupName in blade.groupNames" ng-init="setForm(objectsForm)">
                     <legend>{{groupName==='undefined'?'General':groupName}}</legend>
                     <div class="form-group" ng-repeat="data in blade.objects[groupName]" title="{{data.description}}">
-                        <label class="form-label">{{data.title}}</label>
-                        <!--<va-property2 ng-model="prop" get-prop-values="getPropValues" />-->
-                        <div class="form-input" ng-class="data.valueType==='boolean' ? 'switch' : '__number'" ng-if="!(data.allowedValues.length>0)">
+                        <label class="form-label">{{data.title}}<a ng-click="data.arrayValues.push({value:''});" ng-if="data.isArray"> + </a></label>
+                        <div class="form-input" ng-class="data.valueType==='boolean' ? 'switch' : '__number'" ng-if="!(data.allowedValues.length>0) && !data.isArray">
                             <input required ng-model="data.value" ng-if="data.valueType==='string'" />
                             <input required ng-model="data.value" type="password" ng-if="data.valueType==='secureString'">
-                            <div ng-if="data.valueType==='integer'">
-                                <input va-number required ng-model="data.value" type="text" min="1" step="1">
-                            </div>
-                            <div ng-if="data.valueType==='decimal'">
-                                <input va-number required ng-model="data.value" type="text" min="1" step="1">
-                            </div>
+                            <input va-number required ng-model="data.value" type="text" min="1" step="1" ng-if="data.valueType==='integer'">
+                            <input va-number required ng-model="data.value" type="text" min="1" step="1" ng-if="data.valueType==='decimal'">
                             <div class="form-control __switch">
                                 <label class="form-label" ng-if="data.valueType==='boolean'">
                                     <input type="checkbox" ng-model="data.value" />
@@ -30,8 +25,14 @@
                                     <span ng-bind-html="x | highlight: $select.search"></span>
                                 </ui-select-choices>
                             </ui-select>
-
-                         
+                        </div>
+                        <div ng-repeat="value in data.arrayValues" ng-if="data.isArray" class="form-group">
+                            <div class="form-input __number">
+                                <input required ng-model="value.value" ng-if="data.valueType==='string'" />
+                                <input va-number required ng-model="value.value" type="text" min="1" step="1" ng-if="data.valueType==='integer'">
+                                <input va-number required ng-model="value.value" type="text" min="1" step="1" ng-if="data.valueType==='decimal'">
+                                <a ng-click="data.arrayValues.splice($index,1);"> - </a>
+                            </div>
                         </div>
                     </div>
                 </fieldset>
