--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-detail.tpl.html
@@ -6,7 +6,7 @@
                 <div class="form-group">
                     <label class="form-label" for="">Property name</label>
                     <div class="form-input" ng-init="setForm(formScope);">
-                        <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" />
+                        <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter name" />
                     </div>
                 </div>
                 <!--<div class="form-group">
