--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/member-property-list.tpl.html
@@ -12,7 +12,7 @@
                             </a>
                         </label>
                         <div class="form-input">
-                            <input ng-model="prop.value" required class="form-control" />
+                            <input ng-model="prop.value" required class="form-control" placeholder="Enter value" />
                         </div>
                     </div>
 
