--- a/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/organization-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Customer/VirtoCommerce.CustomerModule.Web/Scripts/blades/organization-detail.tpl.html
@@ -6,7 +6,7 @@
                     <div class="form-group" ng-init="setForm(detailForm)">
                         <label class="form-label">Name</label>
                         <div class="form-input">
-                            <input ng-model="blade.currentEntity.name" focus-on="" required />
+                            <input ng-model="blade.currentEntity.name" focus-on="" required placeholder="Enter name" />
                         </div>
                     </div>
                     <div class="tile-group clearfix">
@@ -17,13 +17,13 @@
                     <div class="form-group">
                         <label class="form-label">Business category</label>
                         <div class="form-input">
-                            <input ng-model="blade.currentEntity.businessCategory" />
+                            <input ng-model="blade.currentEntity.businessCategory" placeholder="Enter value" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Description</label>
                         <div class="form-input">
-                            <textarea class="form-control" cols="30" rows="3" ng-model="blade.currentEntity.description"></textarea>
+                            <textarea class="form-control" cols="30" rows="3" ng-model="blade.currentEntity.description" placeholder="Enter description"></textarea>
                         </div>
                     </div>
                     <div class="tile-group clearfix">
