--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/store-detail.tpl.html
@@ -5,13 +5,13 @@
                 <div class="form-group" ng-init="setForm(detailForm)">
                     <label class="form-label">Code</label>
                     <div class="form-input">
-                        <input ng-model="blade.currentEntity.id" type="text" readonly="readonly">
+                        <p class="form-text">{{blade.currentEntity.id}}</p>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Name</label>
                     <div class="form-input">
-                        <input ng-model="blade.currentEntity.name" type="text" focus-on="" required>
+                        <input ng-model="blade.currentEntity.name" type="text" focus-on="" required placeholder="Enter name">
                     </div>
                 </div>
                 <div class="columns clearfix">
@@ -19,7 +19,7 @@
                         <div class="form-group">
                             <label class="form-label">Catalog</label>
                             <div class="form-input">
-                                <ui-select ng-model="blade.currentEntity.catalog">
+                                <ui-select ng-model="blade.currentEntity.catalog" required>
                                     <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
                                     <ui-select-choices repeat="x.id as x in catalogs | filter: { name: $select.search }">
                                         <span ng-bind-html="x.name | highlight: $select.search"></span>
@@ -32,11 +32,10 @@
                         <div class="form-group">
                             <label class="form-label">State</label>
                             <div class="form-input">
-                                <!-- <select va-chosen ng-model="blade.currentEntity.storeState" ng-options="x.id as x.name for x in storeStates" required></select> -->
-                                <ui-select ng-model="blade.currentEntity.storeState">
-                                    <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                                    <ui-select-choices repeat="x.id as x in storeStates | filter: { name: $select.search }">
-                                        <span ng-bind-html="x.name | highlight: $select.search"></span>
+                                <ui-select ng-model="blade.currentEntity.storeState" required>
+                                    <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+                                    <ui-select-choices repeat="x in storeStates | filter: $select.search">
+                                        <span ng-bind-html="x | highlight: $select.search"></span>
                                     </ui-select-choices>
                                 </ui-select>
                             </div>
