--- a/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/wizards/newStore/new-store-wizard.tpl.html
@@ -5,19 +5,19 @@
                 <div class="form-group" ng-init="setForm(detailForm)">
                     <label class="form-label">Code</label>
                     <div class="form-input">
-                        <input ng-model="blade.currentEntity.id" type="text" placeholder="Store Code" required focus-on="">
+                        <input ng-model="blade.currentEntity.id" type="text" placeholder="Enter code" required focus-on="">
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Name</label>
                     <div class="form-input">
-                        <input ng-model="blade.currentEntity.name" type="text" placeholder="Store Name" required>
+                        <input ng-model="blade.currentEntity.name" type="text" placeholder="Enter name" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Catalog</label>
                     <div class="form-input">
-                        <ui-select ng-model="blade.currentEntity.catalog">
+                        <ui-select ng-model="blade.currentEntity.catalog" required>
                             <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
                             <ui-select-choices repeat="x.id as x in catalogs | filter: { name: $select.search }">
                                 <span ng-bind-html="x.name | highlight: $select.search"></span>
@@ -28,10 +28,10 @@
                 <div class="form-group">
                     <label class="form-label">State</label>
                     <div class="form-input">
-                        <ui-select ng-model="blade.currentEntity.storeState">
-                            <ui-select-match placeholder="Select...">{{$select.selected.name}}</ui-select-match>
-                            <ui-select-choices repeat="x.id as x in storeStates | filter: { name: $select.search }">
-                                <span ng-bind-html="x.name | highlight: $select.search"></span>
+                        <ui-select ng-model="blade.currentEntity.storeState" required>
+                            <ui-select-match placeholder="Select...">{{$select.selected}}</ui-select-match>
+                            <ui-select-choices repeat="x in storeStates | filter: $select.search">
+                                <span ng-bind-html="x | highlight: $select.search"></span>
                             </ui-select-choices>
                         </ui-select>
                     </div>
