--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-list.tpl.html
@@ -1,11 +1,10 @@
-﻿<div class="blade-static">
+﻿<!--<div class="blade-static">
     <div class="form-group">
         <div class="form-input __search">
             <input type="text" placeholder="Search keyword..." ng-model="filter.searchKeyword" ui-keyup="{'enter':'blade.refresh()'}">
         </div>
-        <p class="form-count">Count: <span class="count">{{pageSettings.totalItems}}</span></p>
     </div>
-</div>
+</div>-->
 <div class="blade-content __medium-wide">
     <div class="blade-inner">
         <div class="inner-block">
@@ -15,7 +14,7 @@
                         <tr>
                             <th class="table-col">
                                 <label class="form-control __checkbox">
-                                    <input type="checkbox" ng-model="blade.selectedAll" ng-change="checkAll(selectedAll)" />
+                                    <input type="checkbox" ng-model="blade.selectedAll" ng-change="toggleAll()" />
                                     <span class="check"></span>
                                 </label>
                             </th>
@@ -25,21 +24,20 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="table-item" ng-repeat="data in blade.currentEntities track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)'>
+                        <tr class="table-item" ng-repeat="data in blade.currentEntities track by data.id" ng-class="{'__selected': data.id === selectedNodeId}">
                             <td class="table-col __product-control">
                                 <label class="form-control __checkbox">
                                     <input type="checkbox" ng-model="data.selected">
                                     <span class="check"></span>
                                 </label>
                             </td>
-                            <td class="table-col">
+                            <td class="table-col" ng-click='selectNode(data)'>
                                 <span class="table-t">{{data.name}}</span>
                             </td>
-                            <td class="table-col __product-code">
+                            <td class="table-col __product-code" ng-click='selectNode(data)'>
                                 <span>{{data.priceCount}}</span>
                             </td>
-                            <td class="table-col __date">
-                                <!--<span class="table-date" title="{{data.modifiedDate}}">{{data.modifiedDate | date }}</span>-->
+                            <td class="table-col __date" ng-click='selectNode(data)'>
                                 <span class="table-date" am-time-ago="data.modifiedDate"></span>
                             </td>
                         </tr>
