pricing - pricelist assignments management added

--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-item-list.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/blades/pricelist-item-list.tpl.html
@@ -30,7 +30,7 @@
                                 <span>{{data.sale + ' - ' + data.list}}</span>
                             </td>
                             <td class="table-col __product-code">
-                                {{minQuantity}}
+                                {{data.minQuantity}}
                             </td>
                         </tr>
                     </tbody>
