--- a/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/assignmentsWidget.tpl.html
+++ b/src/Presentation/WebAdmin/Modules/Pricing/VirtoCommerce.PricingModule.Web/Scripts/widgets/assignmentsWidget.tpl.html
@@ -1,4 +1,4 @@
 ﻿<div class="tile" ng-click="openBlade()">
-    <span class="tile-count">{{currentBlade.currentEntity.prices.length}}</span>
+    <span class="tile-count">{{currentBlade.currentEntity.assignments.length}}</span>
     <span class="tile-descr">Assigned catalogs</span>
 </div>
