--- a/PLATFORM/Design/index.html
+++ b/PLATFORM/Design/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
@@ -3082,17 +3082,28 @@
                                                 <legend>Group 1</legend>
                                                 <div class="form-group">
                                                     <label class="form-label">
+                                                        Property
+                                                    </label>
+                                                    <div class="form-input">
+                                                        <input type="text">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="form-label">
+                                                        Property 0
+                                                    </label>
+                                                    <div class="form-input">
+                                                        <input type="text">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="form-label">
                                                         Property <a href=""><i class="form-ico fa fa-pencil"></i></a>
                                                     </label>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="form-label">
                                                         Property 2 <a href=""><i class="form-ico fa fa-pencil"></i></a>
-                                                    </label>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="form-label">
-                                                        Property 3 <a href=""><i class="form-ico fa fa-pencil"></i></a>
                                                     </label>
                                                 </div>
                                             </fieldset>
@@ -3121,6 +3132,11 @@
                                                     <div class="form-input">
                                                         <input type="text">
                                                     </div>
+                                                </div>
+                                                <div class="form-group">
+                                                    <label class="form-label">
+                                                        Property 4 <a href=""><i class="form-ico fa fa-pencil"></i></a>
+                                                    </label>
                                                 </div>
                                             </fieldset>
                                         </form>
